--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ShoppingCart"></activity>
+        <activity android:name=".network.publishOrder"></activity>
+        <activity android:name=".ShoppingCart"
+            android:windowSoftInputMode="adjustPan"
+            />
         <activity
             android:name=".Order"
             android:parentActivityName=".MainActivity">
